--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: QuantumsHerobrine
 version: '${version}'
 main: io.github.greasyrooster1.quantumsherobrine.QuantumsHerobrine
 api-version: '1.20'
+depend: [Citizens]
 commands:
   test:
     description: just a test
